--- a/z/zi/zib/zibbet.com.html
+++ b/z/zi/zib/zibbet.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the zibbet.com privacy policy that was archived on 2016-03-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160326042750id_/https%3A//www.zibbet.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zibbet.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830072051id_/https%3A//www.zibbet.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
-<script src="https://connect.facebook.net/en_US/all.js?hash=62b03aebcfc3b72faae3bbc519361d60&amp;ua=modern_es6" async="" crossorigin="anonymous"></script><script src="https://js-agent.newrelic.com/nr-892.min.js"></script><script type="text/javascript" async="" src="//widget.uservoice.com/NTL4DlrbeGFbQWA1sluJnQ.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"002dd87c81","applicationID":"4696392","transactionName":"elYIEkYNXwgBRU0SA15cFUlEEFoSBVQbPRJWVQ8FTQ==","queueTime":0,"applicationTime":58,"agent":""}</script>
-<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(e,t){return function(){o(e,[(new Date).getTime()].concat(a(arguments)),null,t)}}var o=e("handle"),i=e(2),a=e(3);"undefined"==typeof window.newrelic&&(newrelic=NREUM);var u=["setPageViewName","addPageAction","setCustomAttribute","finished","addToTrace","inlineHit"],c=["addPageAction"],f="api-";i(u,function(e,t){newrelic[t]=r(f+t,"api")}),i(c,function(e,t){newrelic[t]=r(f+t)}),t.exports=newrelic,newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),o("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(0>o?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?u(e,a,i):i()}function n(n,r,o){e&&e(n,r,o);for(var i=t(o),a=l(n),u=a.length,c=0;u>c;c++)a[c].apply(i,r);var s=f[g[n]];return s&&s.push([m,n,r,i]),i}function p(e,t){w[e]=l(e).concat(t)}function l(e){return w[e]||[]}function d(e){return s[e]=s[e]||o(n)}function v(e,t){c(e,function(e,n){t=t||"feature",g[n]=t,t in f||(f[t]=[])})}var w={},g={},m={on:p,emit:n,get:d,listeners:l,context:t,buffer:v};return m}function i(){return new r}var a="nr@context",u=e("gos"),c=e(2),f={},s={},p=t.exports=o();p.backlog=f},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!w++){var e=v.info=NREUM.info,t=s.getElementsByTagName("script")[0];if(e&&e.licenseKey&&e.applicationID&&t){c(l,function(t,n){e[t]||(e[t]=n)});var n="https"===p.split(":")[0]||e.sslForHttp;v.proto=n?"https://":"http://",u("mark",["onload",a()],null,"api");var r=s.createElement("script");r.src=v.proto+e.agent,t.parentNode.insertBefore(r,t)}}}function o(){"complete"===s.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=window,s=f.document;NREUM.o={ST:setTimeout,XHR:f.XMLHttpRequest,REQ:f.Request,EV:f.Event,PR:f.Promise,MO:f.MutationObserver},e(1);var p=(""+location).split("?")[0],l={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-892.min.js"},d=window.XMLHttpRequest&&XMLHttpRequest.prototype&&XMLHttpRequest.prototype.addEventListener&&!/CriOS/.test(navigator.userAgent),v=t.exports={offset:a(),origin:p,features:{},xhrWrappable:d};s.addEventListener?(s.addEventListener("DOMContentLoaded",i,!1),f.addEventListener("load",r,!1)):(s.attachEvent("onreadystatechange",o),f.attachEvent("onload",r)),u("mark",["firstbyte",a()],null,"api");var w=0},{}]},{},["loader"]);</script>
+<!DOCTYPE html><html><head>
+<script src="https://js-agent.newrelic.com/nr-1044.min.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"002dd87c81","applicationID":"4696392","transactionName":"elYIEkYNXwgBRU0SA15cFUlEEFoSBVQbPRJWVQ8FTQ==","queueTime":7,"applicationTime":20,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,SI:p.setImmediate,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1044.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Zibbet</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -22,13 +22,15 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="p:domain\_verify" content="fe605a5436aa05187584d483cf56ac8d">
-	<link rel="stylesheet" media="all" href="/assets/application-site-16310da6e0e2b71f346cfca50fd9924f.css">
+	<link rel="stylesheet" media="all" href="/assets/application-site-53ae7b2110454679e18bb72c791b7e10.css">
 	<script src="//use.typekit.net/rte4ztc.js"></script>
+        <script src="//js.honeybadger.io/v0.4/honeybadger.min.js" type="text/javascript" data-apikey="c3ea8a4d"></script>
 	<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
-	<script src="/assets/application-site-2c9d0707569a49ed8f2cdbba02f106e0.js"></script>
+	<script src="/assets/application-site-7f62c60ffa164eeab7ec7a3c682711c5.js"></script>
 	
 	<meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="GMD2E46+n2Wm2cGZ2nh5cQfT4H8svaM2F5V1jwDuejw6PTdRDjLA/zmFclfaPloDktlvRQvSq7BQrqM2EaAbxw==">
+<meta name="csrf-token" content="KfSWon1bGf29PLp6xZ8yxL4+5kF3C+KoDm6bO8cumOO1jHy9OOq/CwtIsnrt6R2nkGM5In+DlodxNqZhewJXkA==">
+  <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
   <body class="pages-privacy_policy privacy_policy ">
       <div class="snap-drawers">
@@ -190,27 +192,31 @@
 </div>
 
             </header>
-              <header class="mini-header">
-                  <div class="category-nav">
+            <header class="mini-header">
+              <div class="category-nav">
   <div class="container">
     <ul>
-      <li><a href="/search/handmade">Handmade</a></li>
-      <li><a href="/search/fine_art">Fine Art</a></li>
-      <li><a href="/search/vintage">Vintage</a></li>
-      <li><a href="/search/supplies">Supplies</a></li>
-      <li class="seperator"></li>
-      <li><a href="/search/handmade/jewelry">Jewelry</a></li>
-      <li><a href="/search/handmade/housewares">Home &amp; Living</a></li>
-      <li><a href="/search/handmade/children">Kids</a></li>
-      <li><a href="/search/fine_art/photography">Photography</a></li>
-      <li><a href="/search/handmade/weddings">Weddings</a></li>
-      <li class="seperator"></li>
-      <li><a href="/search/all?on_sale=true">Sale Items</a></li>
-      <li><a href="/about-us">About Zibbet</a></li>
+          <li><a href="/search/handmade">Handmade</a></li>
+          <li><a href="/search/fine_art">Fine Art</a></li>
+          <li><a href="/search/vintage">Vintage</a></li>
+          <li><a href="/search/supplies">Supplies</a></li>
+          <li class="seperator"></li>
+          <li><a href="/search/handmade/jewelry">Jewelry</a></li>
+          <li><a href="/search/handmade/housewares">Home &amp; Living</a></li>
+          <li><a href="/search/handmade/children">Kids</a></li>
+          <li><a href="/search/fine_art/photography">Photography</a></li>
+          <li><a href="/search/handmade/weddings">Weddings</a></li>
+          <li><a href="/search/all?on_sale=true">Sale Items</a></li>
+          <li class="seperator"></li>
+      <li>
+        <a data-remote="true" href="/currencies">
+        <span class="flag-icon flag-icon-us"></span>
+            <span class="currency">$ USD</span>
+</a>      </li>
     </ul>
   </div>
 </div>
-              </header>
+            </header>
           </div>
               <div class="container">
       <div class="row">
@@ -500,7 +506,7 @@
   <div class="panel-content">
     <h3>Contact Us</h3>
     <hr>
-    <p>If you have any questions or suggestions, please <a href="#" data-uv-trigger="contact">contact us</a></p>
+    <p>If you have any questions or suggestions, please <a href="mailto:support@zibbet.com">contact us</a></p>
     <br>
     <p>Please post all correspondence to;</p>
     <p>Zibbet Pty Ltd<br>
@@ -522,7 +528,7 @@
       <a href="/" data-no-turbolink="">
         <div class="copyright visible-md visible-lg">
           <div class="logo">Zibbet</div>
-          <div class="copyright-text">Copyright © 2016 Zibbet Pty
+          <div class="copyright-text">Copyright © 2017 Zibbet Pty
           Ltd</div>
         </div>
       </a>
@@ -533,52 +539,56 @@
         <li><a href="/about-us">About Us</a></li>
         <li><a href="https://s3.amazonaws.com/zibbet-public/zibbet-press/Zibbet%20Press%20Kit.zip">Press Kit</a></li>
         <li><a href="http://support.zibbet.com">Support &amp; FAQ</a></li>
-        <li><a data-uv-trigger="contact" data-uv-target="false" href="#">Contact Us</a></li>
+        <li><a href="mailto:support@zibbet.com">Contact Us</a></li>
         <li><a href="/terms-of-use">Terms</a></li>
         <li><a href="/privacy-policy">Privacy</a></li>
       </ul>
     </div>
     <div class="col-sm-2">
       <ul class="social">
-        <li><a href="http://www.pinterest.com/ZibbetPicks" target="new"><i class="fa fa-pinterest fa-lg"></i>&nbsp;</a></li>
+        <li class="hidden-lg hidden-md"><a href="http://www.pinterest.com/ZibbetPicks" target="new"><i class="fa fa-pinterest fa-lg"></i>&nbsp;</a></li>
+        <li class="hidden-sm hidden-xs"><a href="http://www.pinterest.com/ZibbetPicks" target="new"><i class="fa fa-pinterest fa-lg"></i>&nbsp;</a></li>
         <li><a href="http://www.facebook.com/ZibbetFans" target="new"><i class="fa fa-facebook-square fa-lg"></i>&nbsp;</a></li>
         <li><a href="http://www.twitter.com/zibbet" target="new"><i class="fa fa-twitter fa-lg"></i>&nbsp;</a></li>
         <li><a href="http://www.instagram.com/zibbet" target="new"><i class="fa fa-instagram fa-lg"></i>&nbsp;</a></li>
+        <li class="mobile-currency hidden-lg hidden-md">
+          <span class="flag-icon flag-icon-us"></span>
+          <a id="select_currency" href="">
+            <span class="mob-currency">$ USD</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
 </div>
 
-
-
-
+<div class="currency_dropdown_wrapper">
+  <select class="select_mobile_currency" name="currency[currency_code]" id="currency_currency_code"><option value="AUD">Australian Dollar</option>
+<option value="CAD">Canadian Dollar</option>
+<option value="CZK">Czech Koruna</option>
+<option value="DKK">Danish Krone</option>
+<option value="EUR">Euro</option>
+<option value="HKD">Hong Kong Dollar</option>
+<option value="HUF">Hungarian Forint</option>
+<option value="ILS">Israeli New Sheqel</option>
+<option value="JPY">Japanese Yen</option>
+<option value="MXN">Mexican Peso</option>
+<option value="NOK">Norwegian Krone</option>
+<option value="NZD">New Zealand Dollar</option>
+<option value="PHP">Philippine Peso</option>
+<option value="PLN">Polish Złoty</option>
+<option value="GBP">British Pound</option>
+<option value="SGD">Singapore Dollar</option>
+<option value="SEK">Swedish Krona</option>
+<option value="CHF">Swiss Franc</option>
+<option value="THB">Thai Baht</option>
+<option selected="selected" value="USD">United States Dollar</option>
+<option value="BRL">Brazilian Real</option></select>
+</div>
             </footer>
         
       </div>
       <script type="text/javascript"></script>
-      <script type="text/javascript">
-    UserVoice = window.UserVoice || [];
-    (function () {
-        var uv = document.createElement('script');
-        uv.type = 'text/javascript';
-        uv.async = true;
-        uv.src = '//widget.uservoice.com/NTL4DlrbeGFbQWA1sluJnQ.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(uv, s)
-    })();
-
-    UserVoice.push(['set', {
-        accent_color: '#66c6c3',
-        trigger_color: 'white',
-        trigger_background_color: 'rgba(46, 49, 51, 0.6)',
-        smartvote_enabled: false
-    }]);
-
-    UserVoice.push(['identify', {
-    }]);
-
-    UserVoice.push(['autoprompt', {}]);
-</script>
       
       </div>
   
