--- a/m/my/my3/my3gb.com.html
+++ b/m/my/my3/my3gb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the my3gb.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119023627id_/http%3A//www.my3gb.com/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the my3gb.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830093214id_/http%3A//www.my3gb.com/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>My3gb.com - Free hosting</title>
 
@@ -71,14 +71,14 @@
 		</div>
 		<div id="rightside">
 			<div class="right_title">Advertisement</div>
-			<script language="JavaScript" src="http://www.hostingcatalog.com/banner.php?id=A2425211BEB583CFEB48728723B6B3EA67BAB916A3990A22FB374E922AA902430E19703846D51748"></script>
+			<iframe data-aa="1778" src="//ad.a-ads.com/1778?size=160x600&amp;background_color=1f3554&amp;text_color=aeaeae&amp;title_color=a4a4ff&amp;title_hover_color=a4a4ff&amp;link_color=8cc58c&amp;link_hover_color=8cc58c" scrolling="no" style="width:160px; height:600px; border:0px; padding:0;overflow:hidden" allowtransparency="true"></iframe>
 
 		</div>
 		<div class="clearing"></div>
 	</div>
 	<div id="bottomborder">
 		<div id="tpadding">
-		Copyright © 2007-2014 My3gb.com - <a class="light" href="tos.jsp">TOS</a> - <a class="light" href="privacy.jsp">Privacy Policy</a>
+		Copyright © 2007-2017 My3gb.com - <a class="light" href="tos.jsp">TOS</a> - <a class="light" href="privacy.jsp">Privacy Policy</a>
 		</div>
 	</div>
 	<div style="position: relative; height: 60px; width: 850px; margin: 10px auto 0px auto; right: 20px;"></div>
@@ -87,12 +87,12 @@
 <a href="http://www.freewebspace.net" target="_blank"><img src="http://www.freewebspace.net/images/blueg.gif" border="0" alt="Free web hosting"></a>
 <a href="http://www.free-stuff.me.uk" target="_blank"><img src="http://www.free-stuff.me.uk/images/free-stuff-sm.gif" width="88" height="31" border="0" alt="Free Stuff"></a>
 <a href="http://www.free-webhosts.com" target="_blank"><img src="http://www.my3gb.com/images/free-webhosts-88x31i.gif" width="88" height="31" border="0" alt="Free Web Hosting Guide"></a></center></div>
-<div id="pvvi-holder"><img src="http://www.my3gb.com/pvv.jsp?pvid=2099b26540e88599f11c42bd76dd8136&amp;x=1366&amp;y=768&amp;f=0" alt=""></div>
+<div id="pvvi-holder"><img src="http://www.my3gb.com/pvv.jsp?pvid=dbd718dabcec78e499ebaf85982f306e&amp;x=1366&amp;y=768&amp;f=0" alt=""></div>
 <script type="text/javascript">
 var w=window,d=document,e=d.documentElement,g=d.getElementsByTagName('body')[0],x=w.innerWidth||e.clientWidth||g.clientWidth,y=w.innerHeight||e.clientHeight||g.clientHeight;f=(w.location != w.parent.location)?1:0;p=encodeURIComponent(w.parent.location);
-document.getElementById("pvvi-holder").innerHTML = "<img src=\"http://www.my3gb.com/pvv.jsp?pvid=2099b26540e88599f11c42bd76dd8136&x="+x+"&y="+y+"&f="+f+((f==1)?"&p="+p:"")+"\" alt=\"\" />";
+document.getElementById("pvvi-holder").innerHTML = "<img src=\"http://www.my3gb.com/pvv.jsp?pvid=dbd718dabcec78e499ebaf85982f306e&x="+x+"&y="+y+"&f="+f+((f==1)?"&p="+p:"")+"\" alt=\"\" />";
 </script>
-<noscript><img src="http://www.my3gb.com/pvv.jsp?pvid=2099b26540e88599f11c42bd76dd8136&ns=1" alt="" /></noscript>
+<noscript><img src="http://www.my3gb.com/pvv.jsp?pvid=dbd718dabcec78e499ebaf85982f306e&ns=1" alt="" /></noscript>
 <div id="session_div"></div>
 <script type="text/javascript" src="/swfobject.js"></script>
 <script type="text/javascript">
