--- a/t/to/too/toolsmash.com.html
+++ b/t/to/too/toolsmash.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the toolsmash.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606140038id_/http%3A//toolsmash.win/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the toolsmash.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830110511id_/http%3A//toolsmash.bid/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=euc-jp">
 <title>Privacy Policy</title>
@@ -11,16 +11,27 @@
 <meta name="google-site-verification" content="RNeXuXZZkO2QgCoW9RAwiao5w3UAjzUtmshoK4anqt0">
 <meta name="google-site-verification" content="wRpMb3qq9Mfq9mm0jF_CcrC9Bhee7KHipHH9Vp_j7oA">
 <meta name="msvalidate.01" content="2CCE93191B680E8E0A14DFA87ED72FAC">
-<meta name="viewport" content="width=device-width"><meta name="theme-color" content="#A04E21">
+<meta name="viewport" content="width=device-width"><meta name="theme-color" content="#A04E21"> 
 <meta name="robots" content="index,follow">
-<meta property="og:url" content="http://toolsmash.win/privacy.php">
+<meta property="og:url" content="http://toolsmash.bid/privacy.php"> 
 <meta property="og:title" content="Privacy Policy">
 <meta property="og:description" content="Privacy Policy"><meta property="og:site_name" content="ToolsMash">
-<style>.lio img{max-width:100%;}.lio{padding:5px;}.ucl{display:block;text-align:center;font-weight:bold;color:#fff;padding:10px;border:1px solid #FB000F;margin:5px;background:#FB000F}</style>
+
+<style>
+.lio img{max-width: 100%;}
+.lio{padding: 5px;}
+.ucl{display: block; text-align: center; font-weight: bold; color: #fff; padding: 10px; border: 1px solid #FB000F; margin: 5px;background: #FB000F}
+.topt{    max-width: 395px;
+ padding: 10px; background: #fff;
+    margin: auto;}
+</style>
+
 </head>
+
 <body>
+
 <input id="country" type="hidden" value="">
-<script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+<script async="" src="//cdn.taboola.com/libtrc/toolsmash/loader.js" id="tb_loader_script"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -30,24 +41,41 @@
   ga('send', 'pageview');
 
 </script>
+
+ 
+
+
 <header id="b_header">
+
 <form action="/yt.php" id="s_form"> <a href="/yt.php" class="logoArea"> <h1 class="logo_img">ToolsMash</h1> </a> <div class="searchInputP"><div class="searchInput"> <div class="submitWrapper"> <select class="selectS" name="type"><option selected="selected" ;="" value="video">Video</option><option selected="selected" value="audio">Audio</option></select> <input class="searchBoxSubmit" title="Search" type="submit"></div><div class="boxWrapper"><input class="searchBox" id="autoinput" autocomplete="off" name="q" title="Search" type="text" onblur="if(this.value=='')this.value=this.defaultValue" onfocus="if(this.value==this.defaultValue)this.value='';" placeholder="Search Videos, Music, Apps, Phone Specs" value=""> <div style="clear:both;height:0;display:block"></div></div></div></div></form> <nav class="b_scopebar"> <ul> <li class="b_active" ';=""><a href="/">Videos</a></li></ul> </nav> </header>
 <div class="left">
-<div align="center" class="list-a">
-  <!--
-  ~ Copyright (C) 2014 Media.net Advertising FZ-LLC All Rights Reserved
-  -->
-<script id="mNCC" language="javascript">
-    medianet_width = "336";
-    medianet_height = "280";
-    medianet_crid = "837775523";
-    medianet_versionId = "111299"; 
-    (function() {
-        var isSSL = 'https:' == document.location.protocol;
-        var mnSrc = (isSSL ? 'https:' : 'http:') + '//contextual.media.net/nmedianet.js?cid=8CU21T97S' + (isSSL ? '&https=1' : '');
-        document.write('<scr' + 'ipt type="text/javascript" id="mNSC" src="' + mnSrc + '"></scr' + 'ipt>');
-    })();
-  </script><script type="text/javascript" id="mNSC" src="https://contextual.media.net/nmedianet.js?cid=8CU21T97S&amp;https=1"></script>
+<div align="center" class="topt">
+
+  <script type="text/javascript">
+  window._taboola = window._taboola || [];
+  _taboola.push({article:'auto'});
+  !function (e, f, u, i) {
+    if (!document.getElementById(i)){
+      e.async = 1;
+      e.src = u;
+      e.id = i;
+      f.parentNode.insertBefore(e, f);
+    }
+  }(document.createElement('script'),
+  document.getElementsByTagName('script')[0],
+  '//cdn.taboola.com/libtrc/toolsmash/loader.js',
+  'tb_loader_script');
+</script>
+<div id="taboola-mobile-mid-article-thumbnails"></div>
+<script type="text/javascript">
+  window._taboola = window._taboola || [];
+  _taboola.push({
+    mode: 'thumbnails-c',
+    container: 'taboola-mobile-mid-article-thumbnails',
+    placement: 'Mobile Mid Article Thumbnails',
+    target_type: 'mix'
+  });
+</script>
 </div>
 
 <div><div style="box-shadow: 0px 0px 5px rgb(202, 202, 202);padding:10px;background: #fff;border: 1px solid #ddd">
@@ -110,6 +138,8 @@ If you wish to disable cookies, you may do so through your individual browser op
   window._taboola = window._taboola || [];
   _taboola.push({flush: true});
 </script>
+
+
 
 <div class="clrall"></div><footer class="b_footer"> <div> <p id="fti3"> © 2016 ToolsMash.Win</p><ul id="ftrLnks"> <li><a href="/privacy.php">Privacy</a></li><li><a href="/disclaimer.php">Disclaimer</a></li><li><a href="/contact.php">Contact us</a></li><li><a href="/copyright.php">Copyright issues</a></li><li><a href="/search-history">Archive</a></li></ul> </div></footer>
 
