--- a/m/ma/man/manga-go.com.html
+++ b/m/ma/man/manga-go.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the manga-go.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606082004id_/http%3A//www.mangago.me/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the manga-go.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830124029id_/http%3A//www.mangago.me/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta name="y_key" content="0427eb163b2955b0">
@@ -15,15 +15,10 @@
    <meta name="keywords" content="">
   <meta name="description" content="Read hottest manga online for free, feel the best experience 100%!">
   <title>Read Manga Online For Free - Mangago</title>
-  <script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=003461804156313908060:nsq0dyxq3xk"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"33acf608a81ff2a614e3bb5db3177815",petok:"edda5012264bdc2b08cb9af161dea165fd50f4a8-1496737205-1800",adblock:1,betok:"17a13482cd43578557ddd35783292e7a5adf49d4-1496737205-120",zone:"mangago.me",rocket:"0",apps:{}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
-//]]>
-</script>
-<script>
+  <script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=003461804156313908060:nsq0dyxq3xk"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>
   var WEB_ROOT="http://www.mangago.me";
   var AVATAR_ROOT="http://avatar.mangago.me";
-  var COUNTRY_CODE="XX";
+  var COUNTRY_CODE="US";
   var ADR = true;
   var USER_ID = 0;
 	if((window.navigator.appName.toUpperCase().indexOf("MICROSOFT")>=0)&&(document.execCommand))
@@ -33,8 +28,8 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 		catch(e){}
 	</script>
       
-  <link rel="Shortcut Icon" href="http://iweb2.mangapicgallery.com/ywz.ico" type="image/x-icon">
-  <link rel="search" type="application/opensearchdescription+xml" title="Manga Go Search" href="http://iweb2.mangapicgallery.com/opensearch.xml">
+  <link rel="Shortcut Icon" href="http://www.mangago.me/ywz.ico" type="image/x-icon">
+  <link rel="search" type="application/opensearchdescription+xml" title="Manga Go Search" href="http://www.mangago.me/opensearch.xml">
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 	<meta property="og:site_name" content="MangaGo">
 	<meta property="og:title" content="Read Manga Online For Free">
@@ -43,22 +38,22 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 	<meta property="og:image" content="">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="126315704101624">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/r/mergesrc/allcss/?496">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://iweb2.mangapicgallery.com/css/button.css?496">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://iweb2.mangapicgallery.com/css/flags.css?496">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://iweb2.mangapicgallery.com/css/login_nav.css?496">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://iweb2.mangapicgallery.com/emoji.css?496">
-  <script type="text/javascript" src="http://iweb2.mangapicgallery.com/js/eff/jquery.min.js?537"></script>
-  <script type="text/javascript" src="http://iweb2.mangapicgallery.com/js/eff/jquery.tools.min.js?2"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/adv.js?347"></script>
-  <script type="text/javascript" src="http://iweb2.mangapicgallery.com/js/popup.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/rating.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/tag.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/input.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/comment.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/index.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/profile.js?537"></script>
-  <script src="http://iweb2.mangapicgallery.com/js/eff/snowfall.jquery.min.js?537"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/r/mergesrc/allcss/?497">
+  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/css/button.css?497">
+  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/css/flags.css?497">
+  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/css/login_nav.css?497">
+  <link rel="stylesheet" type="text/css" media="screen" href="http://www.mangago.me/emoji.css?497">
+  <script type="text/javascript" src="http://www.mangago.me/js/eff/jquery.min.js?541"></script>
+  <script type="text/javascript" src="http://www.mangago.me/js/eff/jquery.tools.min.js?2"></script>
+  <script src="http://www.mangago.me/js/adv.js?347"></script>
+  <script type="text/javascript" src="http://www.mangago.me/js/popup.js?541"></script>
+  <script src="http://www.mangago.me/js/rating.js?541"></script>
+  <script src="http://www.mangago.me/js/tag.js?541"></script>
+  <script src="http://www.mangago.me/js/input.js?541"></script>
+  <script src="http://www.mangago.me/js/comment.js?541"></script>
+  <script src="http://www.mangago.me/js/index.js?541"></script>
+  <script src="http://www.mangago.me/js/profile.js?541"></script>
+  <script src="http://www.mangago.me/js/eff/snowfall.jquery.min.js?541"></script>
 	<!--[if IE 6]>
 	  <script type="text/javascript" src="/js/png-min.js"></script>
 	  <script>
@@ -207,11 +202,11 @@ margin-bottom: 10px;">Privacy Policy</h1>
 <div class="clear gap"></div>
 <div id="footer">
 		<p class="affiliates">
-				</p>
+		<a href="http://www.lady-first.net/" target="_blank">Lady First</a>		</p>
 		<p class="affiliates">
 				</p>
 		<p id="copyright">
-			All Manga, Character Designs and Logos are © to their respective copyright holders. © 2010-2017 www.mangago.me. Read Fastest Updated Free Yaoi Manga Online at www.mangago.me. Current Time is GMT 8:21 am.
+			All Manga, Character Designs and Logos are © to their respective copyright holders. © 2010-2017 www.mangago.me. Read Fastest Updated Free Yaoi Manga Online at www.mangago.me. Current Time is GMT 12:42 pm.
 		</p>
 		<p class="affiliates">
 			<a title="MangaGo" href="http://www.mangago.me/">Mangago</a> | 
@@ -238,9 +233,9 @@ margin-bottom: 10px;">Privacy Policy</h1>
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 	</script>
-<script type="text/javascript" src="http://www.mangago.me/r/mergesrc/alljs/?537"></script>
+<script type="text/javascript" src="http://www.mangago.me/r/mergesrc/alljs/?541"></script>
 <script type="text/javascript" src="http://www.mangago.me/r/keywords/"></script>
-<script type="text/javascript" src="http://iweb2.mangapicgallery.com/js/search.js?537"></script>
+<script type="text/javascript" src="http://iweb2.mangapicgallery.com/js/search.js?541"></script>
 <div style="display:none">
 <script>
   (function() {
@@ -265,4 +260,4 @@ backToTop();
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "ur-f09989bb-2f56-cc4e-ca01-74355a2faa26"}); </script>
-<!--0.0032--></body></html>
+<!--0.0027--></body></html>
